# Strukt-rinis-programavimas

AL_1_praktine_uzduotis/: CMakeLists.txt  main.cpp
AL_5_praktine_uzduotis/: CMakeLists.txt  main.cpp
Antras-praktinis/: CMakeLists.txt  main.cpp
Jokubas_Kulbokas_PI24_K2_Programa1/: CMakeLists.txt  main.cpp
Jokubas_Kulbokas_PI24_K2_Programa2/: CMakeLists.txt  main.cpp
Jokubas_Kulbokas_PI24_K3_Programa1/: CMakeLists.txt  main.cpp
Jokubas_Kulbokas_PI24_K4_Programa1/: CMakeLists.txt  main.cpp
Jokubas_Kulbokas_PI24_K4_Programa2/: CMakeLists.txt  main.cpp
Jokūbas_Kulbokas_PI24_K1_Programa1/: CMakeLists.txt  main.cpp
Masyvai_2024-10-16/: CMakeLists.txt  main.cpp
Matricos_ir_determinantai/: CMakeLists.txt  main.cpp
Pirma-programa/: main.cpp
Praktinis_darbas_3/: CMakeLists.txt  main.cpp
Praktinis_darbas_4/: CMakeLists.txt  main.cpp
Praktinis_darbas_5/: CMakeLists.txt  main.cpp
SOM_savarankiskas_darbas/: CMakeLists.txt  main.cpp
Space_game/: CMakeLists.txt  Global_variables.cpp  Global_variables.h  combat_encounters.cpp  combat_encounters.h  computer.cpp  computer.h  door.cpp  door.h  enemies_data.cpp  enemies_data.h  loading_map.cpp  loading_map.h  loot package.cpp  loot_package.h  main.cpp  movement.cpp  movement.h  name_opening_endings_stats_level_up.cpp  name_opening_endings_stats_level_up.h  points_of_interest.cpp  points_of_interest.h  recharge_stations.cpp  recharge_stations.h  store_inventory_map.cpp  store_inventory_map.h
c++PazymiuSistema/: CMakeLists.txt  main.cpp
ciklinis_sarasas/: CMakeLists.txt  main.cpp
dekas/: CMakeLists.txt  (+1 more)
(+18 files in other folders)
